# EverOS

./: CHANGELOG.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  README.zh-CN.md  pyproject.toml
.github/: BRANCH_PROTECTION.md
.github/scripts/: classify-upstream-sync.mjs
.github/workflows/: commits.yml  sync-upstream.yml
docs/: api.md  architecture.md  cascade_runbook.md  configuration.md  engineering.md  everos-demo.md  how-memory-works.md  index.md  knowledge.md  locomo_benchmark.md  migration-to-1.0.0.md  multimodal.md  overview.md  prompt_slots.md  storage_layout.md
scripts/: check_deprecated_names.py  check_pr_title.py
src/everos/entrypoints/cli/: main.py
src/everos/entrypoints/cli/commands/: demo.py
src/everos/entrypoints/tui/: __init__.py
src/everos/entrypoints/tui/demo/: __init__.py  app.py  data.py  readme_media.py
src/everos/entrypoints/tui/demo/widgets/: __init__.py  sphere.py
tests/unit/test_entrypoints/test_cli/: test_demo_command.py  test_main.py
tests/unit/test_entrypoints/test_tui/: __init__.py  test_demo_app.py  test_demo_data.py  test_demo_readme_media.py  test_demo_sphere.py
tests/unit/test_scripts/: test_check_pr_title.py
use-cases/: README.md
use-cases/claude-code-plugin/: README.md
